Updated the layout.

--- a/app/src/main/res/layout/activity_account_selection.xml
+++ b/app/src/main/res/layout/activity_account_selection.xml
@@ -29,40 +29,41 @@
 
         <Button
             android:id="@+id/contAdmin"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="184dp"
+            android:layout_width="379dp"
+            android:layout_height="196dp"
+            android:layout_marginTop="44dp"
+            android:alpha="0.9"
+            android:background="@color/Transparent"
             android:onClick="onAdmin"
-            android:text="Admin"
-            android:background="@drawable/btn_gradient_style"
+            android:textColor="@color/white"
+            android:textSize="20dp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.498"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
         <Button
             android:id="@+id/contDelivery"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="140dp"
+            android:layout_width="349dp"
+            android:layout_height="171dp"
+            android:layout_marginTop="36dp"
             android:onClick="onDelivery"
-            android:text="Delivery"
-            android:background="@drawable/btn_gradient_style"
+            android:textColor="@color/white"
+            android:background="@color/Transparent"
+            android:alpha="0.9"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.459"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/contAdmin" />
 
         <Button
             android:id="@+id/contCustomer"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="88dp"
+            android:layout_width="358dp"
+            android:layout_height="140dp"
+            android:layout_marginTop="36dp"
             android:onClick="onCustomer"
-            android:text="Customer"
-            android:background="@drawable/btn_gradient_style"
+            android:textColor="@color/white"
+            android:background="@color/Transparent"
+            android:alpha="0.9"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.459"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/contDelivery" />
     </androidx.constraintlayout.widget.ConstraintLayout>
