--- a/app/src/main/res/layout/activity_verification.xml
+++ b/app/src/main/res/layout/activity_verification.xml
@@ -133,6 +133,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="24dp"
+        android:background="@drawable/btn_gradient_style"
         android:onClick="toPayment"
         android:text="Continue to Payment"
         app:layout_constraintBottom_toBottomOf="parent"
