--- a/app/src/main/res/layout/activity_cart.xml
+++ b/app/src/main/res/layout/activity_cart.xml
@@ -21,6 +21,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:textColor="@color/black"
+            android:textSize="20sp"
+            android:background="@color/Transparent"
+            android:alpha="0.9"
             android:onClick="checkoutNow"
             android:text="Checkout Now" />
     </LinearLayout>
@@ -38,7 +42,7 @@
         android:id="@+id/homeNavBar"
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:backgroundTint="@color/browser_actions_bg_grey"
+        android:background="@drawable/btn_gradient_style"
         android:orientation="horizontal"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -46,31 +50,43 @@
 
         <Button
             android:id="@+id/button"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
+            android:layout_width="109dp"
+            android:layout_height="match_parent"
             android:layout_marginLeft="15dp"
             android:layout_marginRight="15dp"
             android:layout_weight="1"
+            android:alpha="0.9"
+            android:background="@color/Transparent"
             android:onClick="switchHome"
-            android:text="Home" />
+            android:text="Home"
+            android:textColor="@color/white"
+            android:textSize="20sp" />
 
         <Button
             android:id="@+id/cart"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
+            android:layout_width="112dp"
+            android:layout_height="50dp"
             android:layout_marginLeft="15dp"
             android:layout_marginRight="15dp"
             android:layout_weight="1"
-            android:text="Cart" />
+            android:alpha="0.9"
+            android:background="@color/Transparent"
+            android:text="Cart"
+            android:textColor="@color/white"
+            android:textSize="20sp" />
 
         <Button
             android:id="@+id/account"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
+            android:layout_width="156dp"
+            android:layout_height="50dp"
             android:layout_marginLeft="15dp"
             android:layout_marginRight="15dp"
             android:layout_weight="1"
+            android:alpha="0.9"
+            android:background="@color/Transparent"
             android:onClick="switchAccount"
-            android:text="Account" />
+            android:text="Account"
+            android:textColor="@color/white"
+            android:textSize="20sp" />
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
