--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -37,7 +37,8 @@
         android:layout_width="380dp"
         android:layout_height="70dp"
         android:layout_marginTop="100dp"
-        android:background="@drawable/btn_gradient_style"
+        android:background="@drawable/blackbar"
+        android:alpha="0.9"
         android:text="Reset Password"
         android:textColor="#ffff"
         android:textSize="26sp"
