--- a/app/src/main/res/layout/cart_item.xml
+++ b/app/src/main/res/layout/cart_item.xml
@@ -20,60 +20,58 @@
         android:id="@+id/orderItemTotalPrice"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="24dp"
         android:layout_marginTop="16dp"
         android:text="TextView"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/confirmOrderItemName" />
-
-    <Button
-        android:id="@+id/cartRemoveItem"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:layout_marginTop="24dp"
-        android:layout_marginEnd="24dp"
-        android:text="X"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/E_Order"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <Button
-        android:id="@+id/cartIncreaseQuantity"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:layout_marginStart="16dp"
+    <ImageButton
+        android:id="@+id/cartRemoveItem"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        android:text="+"
-        app:layout_constraintStart_toEndOf="@+id/orderItemQuantity"
-        app:layout_constraintTop_toBottomOf="@+id/confirmOrderItemName" />
+        android:layout_marginEnd="8dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/ic_baseline_remove_shopping_cart_24" />
 
     <TextView
         android:id="@+id/orderItemQuantity"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="8dp"
+        android:layout_width="20dp"
+        android:layout_height="20dp"
+        android:layout_marginTop="16dp"
         android:gravity="center"
         android:text="TextView"
-        app:layout_constraintStart_toEndOf="@+id/cartReduceQuantity"
-        app:layout_constraintTop_toBottomOf="@+id/confirmOrderItemName" />
-
-    <Button
-        android:id="@+id/cartReduceQuantity"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:layout_marginStart="32dp"
-        android:layout_marginTop="8dp"
-        android:text="-"
-        app:layout_constraintStart_toEndOf="@+id/orderItemTotalPrice"
-        app:layout_constraintTop_toBottomOf="@+id/confirmOrderItemName" />
+        app:layout_constraintEnd_toStartOf="@+id/cartReduceQuantity"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/E_Order"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="24dp"
         android:layout_marginTop="16dp"
         android:text="E"
-        app:layout_constraintEnd_toStartOf="@+id/orderItemTotalPrice"
-        app:layout_constraintTop_toBottomOf="@+id/confirmOrderItemName" />
+        app:layout_constraintStart_toEndOf="@+id/confirmOrderItemName"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageButton
+        android:id="@+id/cartReduceQuantity"
+        android:layout_width="20dp"
+        android:layout_height="20dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="32dp"
+        app:layout_constraintEnd_toStartOf="@+id/cartRemoveItem"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/ic_baseline_remove_24" />
+
+    <ImageButton
+        android:id="@+id/cartIncreaseQuantity"
+        android:layout_width="20dp"
+        android:layout_height="20dp"
+        android:layout_marginTop="16dp"
+        app:layout_constraintEnd_toStartOf="@+id/orderItemQuantity"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/ic_baseline_add_24" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
