Updated and finalized the layout.

--- a/app/src/main/res/layout/admin_orders_details_item.xml
+++ b/app/src/main/res/layout/admin_orders_details_item.xml
@@ -5,6 +5,17 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
+    <ImageView
+        android:id="@+id/imageView14"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:scaleType="fitXY"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/blank_screen" />
+
     <TextView
         android:id="@+id/adminOrderDetailItem"
         android:layout_width="wrap_content"
